[package]
name = "runebender"
version = "0.2.0"
authors = ["Raph Levien <raph.levien@gmail.com>, Colin Rofls <colin.rofls@gmail.com>"]
license = "Apache-2.0"
edition = "2018"

[dependencies]
norad = { version = "0.1.0", features = ["druid"] }
druid = { git = "https://github.com/xi-editor/druid.git", rev = "1384e6cd", version = "0.6" }
log = "0.4.8"
plist = "0.5"
serde = "1.0"
serde_derive = "1.0"
lopdf = "0.24.0"
svg = "0.7.1"
