[package]
name = "runebender"
version = "0.2.0"
authors = ["Raph Levien <raph.levien@gmail.com>", "Colin Rofls <colin.rofls@gmail.com>"]
license = "Apache-2.0"
edition = "2018"

[dependencies]
runebender-lib = { version = "0.1.0", path = "runebender-lib" }
norad = { version = "0.3.1", features = ["druid", "rayon"] }
druid = "0.7"
log = "0.4.8"
plist = "1.0"
serde = "1.0"
serde_derive = "1.0"
lopdf = "0.26.0"
svg = "0.8.0"
chrono = "0.4"
druid-theme-loader = { version = "0.1.0", path = "druid-theme-loader", features = ["notify"] }

[patch.crates-io]
#druid = { version = "0.7.0", path = "../../druid/druid" }
druid = { version = "0.7.0", git = "https://github.com/linebender/druid.git", rev = "75e83ae5" }
spline = { version = "0.3.0", git = "https://github.com/linebender/spline.git", rev = "229f7e7" }

[workspace]
members = ["runebender-lib", "druid-theme-loader"]
