[package]
name = "druid-theme-loader"
version = "0.1.0"
authors = ["Colin Rofls <colin@cmyr.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
druid = "0.7"
notify = { version = "4.0", optional = true }
log = "0.4.8"
