[package]
name = "font-preview"
version = "0.1.0"
authors = ["Colin Rofls <colin@cmyr.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
runebender-lib = { version = "0.1.0", path = "../runebender-lib" }
norad = { version = "0.3.1", features = ["druid", "rayon"] }
druid = "0.7"
harfbuzz_rs = "1.2"
ttf-parser = { path = "../../ttf-parser" }
